--- a/MovieFriends/Base.lproj/Main.storyboard
+++ b/MovieFriends/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="470-BX-VrZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="470-BX-VrZ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -111,9 +111,6 @@
                         <outlet property="button2" destination="GXE-uM-cIp" id="bmv-Y6-2vp"/>
                         <outlet property="button3" destination="P57-4A-K2f" id="nyz-dG-vfU"/>
                         <outlet property="button4" destination="Rj3-pn-oUT" id="7Ym-i7-ci5"/>
-                        <outlet property="image1" destination="sT4-cw-qCY" id="sBu-bz-ywv"/>
-                        <outlet property="image2" destination="oYR-fF-jTq" id="3bm-gn-YdE"/>
-                        <outlet property="image3" destination="Ry1-Pa-Suc" id="c4V-Qx-5Ov"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OhI-RM-bPP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -464,7 +461,7 @@
     </scenes>
     <resources>
         <image name="hamster" width="800" height="450"/>
-        <image name="marvel" width="1400" height="2073"/>
+        <image name="marvel" width="504" height="746.280029296875"/>
         <image name="titanic" width="1371" height="2016"/>
     </resources>
 </document>
